--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
-	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/41b4dac6bb11092df910e3dfd/47e75ad1a078539a9ee37ef3f.js");</script>	</head>
+	<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/41b4dac6bb11092df910e3dfd/47e75ad1a078539a9ee37ef3f.js");</script>
+	</head>
 	<body class="homepage">
 
 	<!-- Header -->
@@ -55,7 +56,25 @@
 			</div>
 		</div>
 	<!-- /Banner -->
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Subscribe to our mailing list to keep up with our games!</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_41b4dac6bb11092df910e3dfd_ef6b4154b2" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
 
+<!--End mc_embed_signup-->
 	<!-- Main -->
 		<div id="page">
 
@@ -79,7 +98,7 @@
 							</header>
 							<p class="subtitle">A pre-cyberpunk RPG focused on fast combat and deadly mutilation. With earth destroyed, life continues on corporate-run megaships that drift through the stars.</p>
 							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="#" class="button">COMING SOON</a>
+							<a href="" class="button">COMING SOON</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -104,6 +123,8 @@
 					</div>
 				</div>
 			</div>
+			<form action="https://frogandcat.us17.list-manage.com/subscribe/post?u=41b4dac6bb11092df910e3dfd&amp;id=ef6b4154b2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
 	<!-- Footer -->
 		<div id="footer">
 
