--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script https://chimpstatic.com/mcjs-connected/js/users/41b4dac6bb11092df910e3dfd/05e9f7de397a8ee34013e16ae.js");</script>
 		</head>
 	<body class="homepage">
 
@@ -83,9 +84,10 @@
 						</section>
 					</div>
 					<div class="3u">
+					
 						<section>
 							<header>
-								<h2>ABOUT US</h2>
+								<h2>FOLLOW US</h2>
 							</header>
 							<p class="subtitle">Find out more about A Frog and a Cat Productions.This has to be long enough to take up 4 lines or else it will look bad. Buce nimes shanny buce bruce mines</p>
 							<p><a href="#"><img src="images/pics15.jpg" alt=""></a></p>
