war economy page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 					<nav id="nav">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="left-sidebar.html">War Economy</a></li>
-							<li><a href="right-sidebar.html">EGG RPG</a></li>
+							<li><a href="wareconomy.html">War Economy</a></li>
+							<li><a >EGG RPG</a></li>
 							<li><a href="no-sidebar.html">Contact</a></li>
 						</ul>
 					</nav>
@@ -69,8 +69,8 @@
 								<h2>War Economy</h2>
 							</header>
 							<p class="subtitle">A board game about running your own Private Military Company. Collect war spoils, manipulate conflicts, and outsmart your enemies.</p>
-							<p><a href="#"><img src="images/pics13.jpg" alt=""></a></p>
-							<a href="#" class="button">READ MORE</a>
+							<p><a href="wareconomy.html"><img src="images/pics13.jpg" alt=""></a></p>
+							<a href="wareconomy.html" class="button">READ MORE</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -80,7 +80,7 @@
 							</header>
 							<p class="subtitle">A pre-cyberpunk RPG focused on fast combat and deadly mutilation. With earth destroyed, life continues on corporate-run megaships that drift through the stars.</p>
 							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="" class="button">COMING SOON</a>
+							<a class="button" disabled>COMING SOON</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -89,9 +89,13 @@
 							<header>
 								<h2>FOLLOW US</h2>
 							</header>
-							<p class="subtitle">Find out more about A Frog and a Cat Productions.This has to be long enough to take up 4 lines or else it will look bad. Buce nimes shanny buce bruce mines</p>
-							<p><a href="#"><img src="images/pics15.jpg" alt=""></a></p>
-							<a href="#" class="button">READ MORE</a>
+							<p class="subtitle">Keep up to date on all A Frog and a Cat Productions games by following us on Twitter! 
+							<br>
+							<br>
+							<br>
+							</p>
+							<p><a href="https://TWITTer.com/frogandcat_"><img src="images/pics15.jpg" alt=""></a></p>
+							<a href="https://TWITTer.com/frogandcat_" class="button">TWITTER</a>
 						</section>
 					</div>
 					<div class="3u">
@@ -101,7 +105,7 @@
 							</header>
 							<p class="subtitle">Have a question or comment? Shoot us a message here. This photo is also definitely not a placeholder. It's a photograph of our headquarters.</p>
 							<p><a href="#"><img src="images/pics16.jpg" alt=""></a></p>
-							<a href="#" class="button">READ MORE</a>
+							<a href="#" class="button">CONTACT US</a>
 						</section>
 					</div>
 				</div>
