--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="wareconomy.html">War Economy</a></li>
 							<li><a >EGG RPG</a></li>
-							<li><a href="no-sidebar.html">Contact</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -104,8 +104,8 @@
 								<h2>CONTACT</h2>
 							</header>
 							<p class="subtitle">Have a question or comment? Shoot us a message here. This photo is also definitely not a placeholder. It's a photograph of our headquarters.</p>
-							<p><a href="#"><img src="images/pics16.jpg" alt=""></a></p>
-							<a href="#" class="button">CONTACT US</a>
+							<p><a href="contact.html"><img src="images/pics16.jpg" alt=""></a></p>
+							<a href="contact.html" class="button">CONTACT US</a>
 						</section>
 					</div>
 				</div>
