--- a/wareconomy.html
+++ b/wareconomy.html
@@ -39,7 +39,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">HOME</a></li>
-							<li  class="active"><a href="left-sidebar.html">WAR ECONOMY</a></li>
+							<li  class="active"><a href="">WAR ECONOMY</a></li>
 							<li><a >EGG RPG</a></li>
 							<li><a href="contact.html">CONTACT</a></li>
 						</ul>
